[tool.poetry]
name = "Waterfall Group Project"
version = "0.1.0"
description = "converters"
authors = ["Jack Reiman Jreiman086@gmail.com, Alana Mars marrsala000@esd401.org, Abhash Dhungana dhungabh000@esd401.org, Sidalee Boast boastsid000@esd401.org"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"